# fork-panel-selector-app-template

./: README.md  app.py  numerous.toml  pyproject.toml
